--- a/src/components/web.css
+++ b/src/components/web.css
@@ -154,11 +154,17 @@ body {
 
 .mobile-links-list {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 5px;
   width: 100%;
 }
 
+.mobile-link-row{
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  width: 100%;
+}
 .mobile-link {
   color: #374151;
   text-decoration: none;
